# webfinity_bot

./: .env  Dockerfile  README.md  docker-compose.yaml  main.py  pyproject.toml  webfinity_key.pem
bot/filters/: __init__.py  admin.py  chat_type.py  registered.py  subscriber.py
bot/handlers/: __init__.py  command_handler.py  inline_handler.py  likee_state_handler.py  message_handler.py  register_state_handler.py  sender_state_handler.py  timer_state_handler.py
bot/keyboards/: __init__.py  inline.py  keyboard.py
bot/middlewares/: logging_middleware.py
bot/services/: likee_service.py  weather_service.py
bot/states/: __init__.py  likee_state.py  register_state.py  sender_state.py  timer_state.py  weather_state.py
bot/utils/: helper.py
data/: base.py  config.py
data/crud/: user.py
data/models/: __init__.py  gamer.py  user.py
migrations/: env.py
migrations/versions/: 00bb064066da_initial_migration.py  160ccc308d8b_initial_migration.py  1fc5333cc0f0_initial_migration.py  e859b4880f52_initial_migration.py  f917cb70608c_initial_migration.py  fd2bd81e0e30_initial_migration.py
